--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+
+  <!-- Typography -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+  <!-- Style -->
+  <link rel="stylesheet" href="assets/style/style.css">
   
   <title>Frontend Mentor | FAQ accordion</title>
 
@@ -16,33 +24,103 @@
 </head>
 <body>
 
-  FAQs
+  <div class="container">
+    <div class="bg-pattern"></div>
 
-  What is Frontend Mentor, and how will it help me?
+    <div class="content">
 
-  Frontend Mentor offers realistic coding challenges to help developers improve their 
-  frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
-  all levels and ideal for portfolio building.
+      <div class="header-content">
+        <div class="icon">
+          <img src="assets/images/icon-star.svg" alt="icon star">
+        </div>
+        <h1>FAQs</h1>
+      </div>
 
-  Is Frontend Mentor free?
+      <div class="main-content" id="main-content">
 
-  Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
-  option providing access to a range of projects suitable for all skill levels.
+        <div class="card on" id="card">
+          <div class="title" id="title">
+            <h2>What is Frontend Mentor, and how will it help me?</h2>
+            <div class="icons">
+              <a href="#" class="plus" id="plus"><i class="fa-solid fa-circle-plus"></i></a>
+              <a href="#" class="minus" id="minus"><i class="fa-solid fa-circle-minus"></i></a>
+            </div>
+          </div>
+          <p id="paragrapho">
+            Frontend Mentor offers realistic coding challenges to help developers improve their
+            frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
+            all levels and ideal for portfolio building.
+          </p>
+        </div>
 
-  Can I use Frontend Mentor projects in my portfolio?
+        <div class="card" id="card">
+          <div class="title" id="title">
+            <h2>Is Frontend Mentor free?</h2>
+            <div class="icons">
+              <a href="#" class="plus" id="plus"><i class="fa-solid fa-circle-plus"></i></a>
+              <a href="#" class="minus" id="minus"><i class="fa-solid fa-circle-minus"></i></a>
+            </div>
+          </div>
+          <p id="paragrapho">
+            Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
+            option providing access to a range of projects suitable for all skill levels.
+          </p>
+        </div>
 
-  Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
-  way to showcase your skills to potential employers!
+        <div class="card" id="card">
+          <div class="title" id="title">
+            <h2>Can I use Frontend Mentor projects in my portfolio?</h2>
+            <div class="icons">
+              <a href="#" class="plus" id="plus"><i class="fa-solid fa-circle-plus"></i></a>
+              <a href="#" class="minus" id="minus"><i class="fa-solid fa-circle-minus"></i></a>
+            </div>
+          </div>
+          <p id="paragrapho">
+            Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
+            way to showcase your skills to potential employers!
+          </p>
+        </div>
 
-  How can I get help if I'm stuck on a Frontend Mentor challenge?
+        <div class="card" id="card">
+          <div class="title" id="title">
+            <h2>How can I get help if I'm stuck on a Frontend Mentor challenge?</h2>
+            <div class="icons">
+              <a href="#" class="plus" id="plus"><i class="fa-solid fa-circle-plus"></i></a>
+              <a href="#" class="minus" id="minus"><i class="fa-solid fa-circle-minus"></i></a>
+            </div>
+          </div>
+          <p id="paragrapho">
+            The best place to get help is inside Frontend Mentor's Discord community. There's a help 
+            channel where you can ask questions and seek support from other community members.
+          </p>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
+  <!-- 
+
   
-  The best place to get help is inside Frontend Mentor's Discord community. There's a help 
-  channel where you can ask questions and seek support from other community members.
+
+  
+
+  
+
+  
+
+  
+  
+  
 
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
+
+  <script src="https://kit.fontawesome.com/24690ddc1f.js" crossorigin="anonymous"></script>
+  <script src="assets/script/index.js"></script>
 </body>
 </html>
